AJAX en Login, MVC, arreglar estructura
Cambié la estructura de las carpetas de modo que tanto css como las
imágenes que pertenecen a la página estén en root/assets
Agregué AJAX en el Login
Cambié el Login a MVC

--- a/View/home.html
+++ b/View/home.html
@@ -3,7 +3,7 @@
         <title> Osham Fashion Comunity </title>
         <style>
             body{
-                background-image: url('images/background.jpg');
+                background-image: url('../Assets/images/background.jpg');
                 background-size: 100% 100%;
                 background-repeat: no-repeat;
             }
@@ -22,7 +22,7 @@
     <body>
         <div id="top-bar">
             <div id="top-left">
-                <img src="images/oshamfashion.png" width="120" height="50"/>
+                <img src="../Assets/images/oshamfashion.png" width="120" height="50"/>
             </div>
             <div id="top-right">
                 <a href="login.html"><i class="fa fa-user" style="color:#ffffff ;font-size:24px"></i></a>
