--- a/View/forgotPassword.html
+++ b/View/forgotPassword.html
@@ -9,7 +9,7 @@
     <meta name="authors" content="Adriana Valenzuela, Mayra Ruíz, Roberto Ruíz">
     <meta name="property" content="ITESM CAMPUS MONTERREY">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/log.css" />
+    <link rel="stylesheet" href="../Assets/css/log.css" />
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:600' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -29,7 +29,7 @@
 <body>
 <div id="top-bar">
     <div id="top-left">
-        <img src="images/oshamfashion.png" width="120" height="50"/>
+        <img src="../Assets/images/oshamfashion.png" width="120" height="50"/>
     </div>
     <div id="top-right">
         <a href="login.html"><i class="fa fa-user" style="color:#ffffff ;font-size:24px"></i></a>
